# missedcallrespondr

./: .env.production  .gitignore  Cargo.toml  DEPLOYMENT.md  GUARDRAILS.md  SECURITY_AUDIT.md  deploy-backend.ps1  deploy-from-vps.sh  index.html  middleware.js  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: ADMIN_GUIDE.md
migrations/: 000001_initial.sql  000002_api_keys.sql  000003_portfolio_integrations.sql  000004_add_email_description.sql  000004_password_resets.sql  000005_provider_keys.sql  000006_campaign_triggers.sql  000007_contact_custom_fields.sql  000008_credit_system.sql  000008_tag_groups_and_tags.sql  000009_payment_checkout.sql  000010_payment_provider.sql
pages/api/: health.js
public/: index.html  thank-you.html
src/: App.tsx  config.rs  db.rs  email.rs  error.rs  features.rs  main.rs  routes.rs  routes.rs.bak  state.rs  styles.css
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs
src/components/: AppShell.tsx  SettingsPage.tsx
src/handlers/: admin_handler.rs  affiliates_handler.rs  api_key_handler.rs  api_key_handler.rs.bak  calendar_events_handler.rs  call_handler.rs  call_handler.rs.bak  call_log_handler.rs  campaigns_handler.rs  checkout_handler.rs  clients_handler.rs  contact_custom_field_handler.rs  contact_handler.rs  coreswift_push.rs  dashboard_handler.rs  deals_handler.rs  email_templates_handler.rs  export_templates_handler.rs  follow_up_handler.rs  follow_up_handler.rs.bak  import_logs_handler.rs  leads_handler.rs  (+22 more)
supabase/: schema-complete.sql  schema.sql
(+44 files in other folders)
